@@ -11,9 +11,10 @@ import static net.atos.zac.app.planitems.model.PlanItemType.USER_EVENT_LISTENER;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
+
+import net.atos.zac.app.planitems.model.HumanTaskFormulierKoppeling;
 
 import org.flowable.cmmn.api.runtime.PlanItemDefinitionType;
 import org.flowable.cmmn.api.runtime.PlanItemInstance;
@@ -23,7 +24,6 @@ import net.atos.zac.app.planitems.model.PlanItemType;
 import net.atos.zac.app.planitems.model.RESTPlanItem;
 import net.atos.zac.app.planitems.model.UserEventListenerActie;
 import net.atos.zac.zaaksturing.ZaakafhandelParameterService;
-import net.atos.zac.zaaksturing.model.FormulierDefinitie;
 import net.atos.zac.zaaksturing.model.HumanTaskParameters;
 
 /**
@@ -38,7 +38,7 @@ public class RESTPlanItemConverter {
     private ZaakafhandelParameterService zaakafhandelParameterService;
 
     public List<RESTPlanItem> convertPlanItems(final List<PlanItemInstance> planItems, final UUID zaakUuid) {
-        return planItems.stream().map(planItemInstance -> this.convertPlanItem(planItemInstance, zaakUuid)).collect(Collectors.toList());
+        return planItems.stream().map(planItemInstance -> this.convertPlanItem(planItemInstance, zaakUuid)).toList();
     }
 
     public RESTPlanItem convertPlanItem(final PlanItemInstance planItem, final UUID zaakUuid) {
@@ -56,9 +56,10 @@ public class RESTPlanItemConverter {
 
     public RESTPlanItem convertHumanTask(final PlanItemInstance planItem, final UUID zaakUuid, final HumanTaskParameters parameters) {
         final RESTPlanItem restPlanItem = convertPlanItem(planItem, zaakUuid);
-        restPlanItem.groep = groepConverter.convertGroupId(parameters.getGroepID());
-        if (parameters.getFormulierDefinitieID() != null) {
-            restPlanItem.formulierDefinitie = FormulierDefinitie.valueOf(parameters.getFormulierDefinitieID());
+        restPlanItem.formulierDefinitie =
+                HumanTaskFormulierKoppeling.readFormulierDefinitie(planItem.getPlanItemDefinitionId());
+        if (parameters != null) {
+            restPlanItem.groep = groepConverter.convertGroupId(parameters.getGroepID());
         }
         return restPlanItem;
     }
